--- a/templates/issues/board.html
+++ b/templates/issues/board.html
@@ -4,7 +4,7 @@
 {% block title %}Task List{% endblock title %}
 
 {% block content %}
-<h1>My Board</h1>
+<h1>{{ user.team.name }} Board</h1>
 <div class="container">
     <div class="row">
         <div class="col-md-5">
