--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,16 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'board' %}">Task</a>
                 <a class="nav-link" href="{% url 'new_issue' %}">New Task</a>
                 <a class="nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-link" href="{% url 'password_change' %}">Change Password</a>
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                {% endif %}
             </div>
             </div>
         </div>
